--- a/css/style.css
+++ b/css/style.css
@@ -210,13 +210,11 @@ ul {
 .footer-logo {
     height:50px;
     background: url("../images/logo.svg") no-repeat;
+    background-position: center;
     background-size: contain;
 }
 .footer-logo-wrap {
-    display: flex;
     width: 30%;
-
-    justify-content: center;
 }
 
 .footer-menu {
@@ -229,7 +227,7 @@ ul {
 
 .menu-items a {
 display: block;
-    padding: 10px;
+    padding: 8px;
 
 }
 .menu-items .item {
@@ -249,149 +247,3 @@ a {
 }
 
 
-@media (max-width: 600px){
-    p {
-        font-size: 1rem;
-    }
-
-    .container {
-        width: 90%;
-        height: auto;
-    }
-
-    .container .logo {
-        justify-content: center;
-        padding-top: 15vh;
-
-    }
-
-    .heading h1, p {
-        padding: 0 15px 15px 15px;
-    }
-
-    .heading h1 {
-        font-size: 2rem;
-    }
-
-    .heading .install-buttons {
-        flex-direction: column;
-        width: 50%;
-        text-align: center;
-    }
-
-
-    .install-buttons .ios {
-        margin-bottom: 10px;
-
-    }
-
-    .feature h1, .page-feature h1, .main-features h1 {
-        padding-bottom: 45px;
-    }
-
-    .features-list {
-        align-items: center;
-        flex-direction: column;
-    }
-
-    .features-list .features-term {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .features-term .term {
-        margin: 30px 70px;
-    }
-    .mac-image img ,  .page-feature .image-devices img{
-        height: 300px;
-        width: 80vw;
-        padding-bottom: 20px;
-    }
-    .features-term .term h3 {
-        text-align: center;
-    }
-    .features-term .term p {
-        text-align: center;
-    }
-
-    .page-feature {
-        margin: 50px auto;
-    }
-
-
-    .highlights {
-        flex-direction: column;
-        margin: 30px 0;
-    }
-    .card {
-        width: 80%;
-        padding-bottom: 20px;
-        margin: 0 auto;
-    }
-
-
-
-    .company-logo {
-         flex-direction: column;
-    }
-
-    .google, .microsoft, .ibm, .hewlett, .vector {
-        height: 60px;
-        width: 100vw;
-        background-size: contain;
-    }
-
-
-
-    .wrapper-footer {
-        background-color: #f6f6f6;
-        display: flex;
-        flex-direction: column;
-        padding-top: 30px;
-    }
-    ul {
-        list-style-type: none;
-    }
-    .footer-logo {
-        height:50px;
-        background: url("../images/logo.svg") no-repeat;
-        background-size: contain;
-    }
-    .footer-logo-wrap {
-        display: flex;
-        width: 30%;
-
-        justify-content: center;
-    }
-
-    .footer-menu {
-        width: 50%;
-    }
-    .menu-items {
-        display: grid;
-        grid-template-columns: auto auto auto;
-    }
-
-    .menu-items a {
-        display: block;
-        padding: 10px;
-
-    }
-    .menu-items .item {
-        width: 50%;
-    }
-    a {
-        text-decoration: none;
-        color: var(--Dark-Grayish-Blue);
-    }
-
-
-    .social-icons ul{
-        display: grid;
-        grid-template-columns: auto auto auto;
-        grid-gap: 20px;
-        padding-top: 20px;
-    }
-
-
-}
