--- a/css/responsive.css
+++ b/css/responsive.css
@@ -31,6 +31,11 @@
 
     .install-buttons .ios {
         margin-bottom: 10px;
+        margin-right: 0;
+
+    }
+    .install-buttons .mac {
+        margin-left: 0;
 
     }
 
